# TDT-task4

./: .gitignore  1.py  CMakeLists.txt  LICENSE  domain_gap_analysis.py  finetune_model.py  finetuning_explanation.py  learn_test1.py  learn_tets2.py  mnist_fc.pth  mnist_fc_improved.pth  mnist_finetuned_on_custom.pth  model_ts.pt  p4_1.cpp  p4_1_exchange.py  p4_1_test.cpp  p4_1_test2.cpp  p4_3_test1.cpp  retrain_mnist.py  test1.py  test2.py  test3.py  test3_fixed.py  test_model_on_numbers.py  train_number.py  work_diary.md
